add code to count rows and drop any NaN values in dataframe

--- a/project.ipynb
+++ b/project.ipynb
@@ -17,8 +17,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ebe26031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import necessary packages for notebook\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.datasets import load_iris\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "cc354c6a",
+   "id": "5cd247ae",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -26,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e1e293",
+   "id": "3e2fe8d1",
    "metadata": {},
    "source": [
     "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
@@ -37,62 +52,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "97b5d0b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-      "0                  5.1               3.5                1.4               0.2   \n",
-      "1                  4.9               3.0                1.4               0.2   \n",
-      "2                  4.7               3.2                1.3               0.2   \n",
-      "3                  4.6               3.1                1.5               0.2   \n",
-      "4                  5.0               3.6                1.4               0.2   \n",
-      "..                 ...               ...                ...               ...   \n",
-      "145                6.7               3.0                5.2               2.3   \n",
-      "146                6.3               2.5                5.0               1.9   \n",
-      "147                6.5               3.0                5.2               2.0   \n",
-      "148                6.2               3.4                5.4               2.3   \n",
-      "149                5.9               3.0                5.1               1.8   \n",
-      "\n",
-      "       species  \n",
-      "0       setosa  \n",
-      "1       setosa  \n",
-      "2       setosa  \n",
-      "3       setosa  \n",
-      "4       setosa  \n",
-      "..         ...  \n",
-      "145  virginica  \n",
-      "146  virginica  \n",
-      "147  virginica  \n",
-      "148  virginica  \n",
-      "149  virginica  \n",
-      "\n",
-      "[150 rows x 5 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.datasets import load_iris\n",
-    "import pandas as pd\n",
-    "\n",
-    "#load the dataset from sklearn\n",
-    "iris = load_iris()\n",
-    "iris_df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
-    "iris_df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
-    "\n",
-    "print(iris_df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "87272cf4",
+   "id": "28ff3b83",
    "metadata": {},
    "source": [
     "## Supervised Learning"
@@ -100,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5c4040c",
+   "id": "7b0cfa87",
    "metadata": {},
    "source": [
     "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
@@ -113,8 +74,91 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "97b5d0b2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                5.1               3.5                1.4               0.2   \n",
+      "1                4.9               3.0                1.4               0.2   \n",
+      "2                4.7               3.2                1.3               0.2   \n",
+      "3                4.6               3.1                1.5               0.2   \n",
+      "4                5.0               3.6                1.4               0.2   \n",
+      "\n",
+      "  species  \n",
+      "0  setosa  \n",
+      "1  setosa  \n",
+      "2  setosa  \n",
+      "3  setosa  \n",
+      "4  setosa  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#load the dataset from sklearn\n",
+    "iris = load_iris()\n",
+    "df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
+    "\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "956efe86",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count the total number of records in the dataset:\n",
+      "\n",
+      "sepal length (cm)    150\n",
+      "sepal width (cm)     150\n",
+      "petal length (cm)    150\n",
+      "petal width (cm)     150\n",
+      "species              150\n",
+      "dtype: int64\n",
+      "\n",
+      "\n",
+      "Remove any NaN values before further processing:\n",
+      "\n",
+      "sepal length (cm)    150\n",
+      "sepal width (cm)     150\n",
+      "petal length (cm)    150\n",
+      "petal width (cm)     150\n",
+      "species              150\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Count the total number of records in the dataset:\\n\")\n",
+    "print(df.count())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Remove any NaN values before further processing:\\n\")\n",
+    "df = df.dropna()\n",
+    "\n",
+    "print(df.count())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "bbc249b1",
+   "id": "899a6351",
    "metadata": {},
    "source": [
     "## Classification Algorithms"
@@ -122,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3807b2a",
+   "id": "cf67fc47",
    "metadata": {},
    "source": [
     "Classification algorithms are fundamental in machine learning, serving to categorize data into predefined classes or categories. They are pivotal in numerous real-world applications, such as sentiment analysis, image recognition (e.g., the MNIST dataset), and medical diagnosis (e.g., the Breast Cancer Wisconsin dataset).\n",
@@ -136,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447fdbab",
+   "id": "89878bb8",
    "metadata": {},
    "source": [
     "## K Nearest Neighbours"
@@ -144,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6aa9a5a",
+   "id": "24ba593f",
    "metadata": {},
    "source": [
     "## Support Vector Machines"
