add t-tests for independence

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f9b3ec58",
+   "id": "4be55cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.datasets import load_iris\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "80704f02",
+   "id": "6f58696e",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75d7355",
+   "id": "467fb751",
    "metadata": {},
    "source": [
     "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
@@ -53,7 +54,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afea79ee",
+   "id": "808eaa17",
+   "metadata": {},
+   "source": [
+    "## Literature Review"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d82f728c",
+   "metadata": {},
+   "source": [
+    "Placeholder for review of literature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31f3dd1c",
    "metadata": {},
    "source": [
     "## Supervised Learning"
@@ -61,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c463d534",
+   "id": "73cb79de",
    "metadata": {},
    "source": [
     "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
@@ -112,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75281835",
+   "id": "3c84b6b5",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -120,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ad7320a4",
+   "execution_count": 3,
+   "id": "ac2331c9",
    "metadata": {
     "scrolled": false
    },
@@ -199,7 +216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dhiggins\\AppData\\Local\\Temp\\ipykernel_125088\\984429858.py:29: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\dhiggins\\AppData\\Local\\Temp\\ipykernel_128304\\984429858.py:29: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  correlation_matrix = df.corr()\n"
      ]
     },
@@ -252,7 +269,106 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43baa07a",
+   "id": "20126d12",
+   "metadata": {},
+   "source": [
+    "The initial analysis of the dataset show there are no missing values. It will not be necessary to preprocess the dataset using the dropna method to clean the data. These results also suggest that the setosa species is relatively easy to differentiate from the other two species, particularly when considering the petal lengths and widths. The sepal characteristics are less clear but the distribution plots indicate there may a statistically significant difference between setosa and the other two varieties. In each of the pair plots above, a line can be constructed on the plot that would isolate the setosa values from the other varieties completely. The versicolor and virginica show some separation but are intermingled to some degree on each plot. The separation seen between each species indicates that the K Nearest Neighbours classifier may be an appropriate algorithm to use here. We will carry out a t-test to gain more insight on this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a58ca48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = 7.709331032755147e-32)\n",
+      "\n",
+      "Reject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = 1.0353958396281789e-13)\n",
+      "\n",
+      "\n",
+      "\n",
+      "Results of virginica and versicolor t-tests:\n",
+      "\n",
+      "Characteristic: sepal length (cm)\n",
+      "\n",
+      "Reject the null hypothesis: There is a significant difference (p-value = 1.8661443873771216e-07)\n",
+      "\n",
+      "\n",
+      "Characteristic: sepal width (cm)\n",
+      "\n",
+      "Reject the null hypothesis: There is a significant difference (p-value = 0.001819483482104968)\n",
+      "\n",
+      "\n",
+      "Characteristic: petal length (cm)\n",
+      "\n",
+      "Reject the null hypothesis: There is a significant difference (p-value = 4.900287527398095e-22)\n",
+      "\n",
+      "\n",
+      "Characteristic: petal width (cm)\n",
+      "\n",
+      "Reject the null hypothesis: There is a significant difference (p-value = 2.111534400988573e-25)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separate the data into three groups: setosa, versicolor, and virginica\n",
+    "setosa_data = df[df['species'] == 'setosa']\n",
+    "other_data = df[df['species'].isin(['versicolor', 'virginica'])]\n",
+    "\n",
+    "# Perform a t-test between setosa and the other two varieties\n",
+    "t_stat, p_value = stats.ttest_ind(setosa_data['sepal length (cm)'], other_data['sepal length (cm)'], equal_var=False)\n",
+    "\n",
+    "print(\"Results of setosa versus other varieties t-tests:\")\n",
+    "# Check the p-value to determine statistical significance\n",
+    "alpha = 0.05  # Significance level\n",
+    "if p_value < alpha:\n",
+    "    print(f\"Reject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
+    "else:\n",
+    "    print(f\"Fail to reject the null hypothesis: There is no significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
+    "\n",
+    "# Perform a t-test between setosa and the other two varieties\n",
+    "t_stat, p_value = stats.ttest_ind(setosa_data['sepal width (cm)'], other_data['sepal width (cm)'], equal_var=False)\n",
+    "\n",
+    "# Check the p-value to determine statistical significance\n",
+    "alpha = 0.05  # Significance level\n",
+    "if p_value < alpha:\n",
+    "    print(f\"\\nReject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
+    "else:\n",
+    "    print(f\"\\nFail to reject the null hypothesis: There is no significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# Separate the data into versicolor and virginica\n",
+    "versicolor_data = df[df['species'] == 'versicolor']\n",
+    "virginica_data = df[df['species'] == 'virginica']\n",
+    "\n",
+    "# List of characteristics to perform t-tests on\n",
+    "characteristics = [\"sepal length (cm)\", \"sepal width (cm)\", \"petal length (cm)\", \"petal width (cm)\"]\n",
+    "\n",
+    "print(\"\\n\\n\\nResults of virginica and versicolor t-tests:\")\n",
+    "# Perform t-tests for each characteristic\n",
+    "for char in characteristics:\n",
+    "    t_stat, p_value = stats.ttest_ind(versicolor_data[char], virginica_data[char], equal_var=False)\n",
+    "\n",
+    "    # Check the p-value to determine statistical significance\n",
+    "    alpha = 0.05  # Significance level\n",
+    "    if p_value < alpha:\n",
+    "        print(f\"\\nCharacteristic: {char}\")\n",
+    "        print(f\"\\nReject the null hypothesis: There is a significant difference (p-value = {p_value})\")\n",
+    "    else:\n",
+    "        print(f\"\\nCharacteristic: {char}\")\n",
+    "        print(f\"\\nFail to reject the null hypothesis: There is no significant difference (p-value = {p_value})\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5364e88f",
    "metadata": {},
    "source": [
     "## Classification Algorithms"
@@ -260,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62913319",
+   "id": "abd5de24",
    "metadata": {},
    "source": [
     "Classification algorithms are fundamental in machine learning, serving to categorize data into predefined classes or categories. They are pivotal in numerous real-world applications, such as sentiment analysis, image recognition (e.g., the MNIST dataset), and medical diagnosis (e.g., the Breast Cancer Wisconsin dataset).\n",
@@ -274,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9cd8a4f",
+   "id": "341e15a1",
    "metadata": {},
    "source": [
     "## K Nearest Neighbours"
@@ -282,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6b87134",
+   "id": "dbb8cb5a",
    "metadata": {},
    "source": [
     "## Support Vector Machines"
