add KNN code and synthetic data generator

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,22 +19,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4be55cf0",
+   "id": "00f6d535",
    "metadata": {},
    "outputs": [],
    "source": [
     "#import necessary packages for notebook\n",
     "\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.datasets import load_iris\n",
     "import pandas as pd\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f58696e",
+   "id": "83e3461d",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "467fb751",
+   "id": "43921d6f",
    "metadata": {},
    "source": [
     "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
@@ -54,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808eaa17",
+   "id": "ebe96221",
    "metadata": {},
    "source": [
     "## Literature Review"
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82f728c",
+   "id": "64940994",
    "metadata": {},
    "source": [
     "Placeholder for review of literature"
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f3dd1c",
+   "id": "a5375753",
    "metadata": {},
    "source": [
     "## Supervised Learning"
@@ -78,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73cb79de",
+   "id": "20fc37b7",
    "metadata": {},
    "source": [
     "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c84b6b5",
+   "id": "98d9f533",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -138,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ac2331c9",
+   "id": "f8b873d1",
    "metadata": {
     "scrolled": false
    },
@@ -216,7 +220,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dhiggins\\AppData\\Local\\Temp\\ipykernel_128304\\984429858.py:29: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\dhiggins\\AppData\\Local\\Temp\\ipykernel_75060\\984429858.py:29: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  correlation_matrix = df.corr()\n"
      ]
     },
@@ -269,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20126d12",
+   "id": "064cd3c7",
    "metadata": {},
    "source": [
     "The initial analysis of the dataset show there are no missing values. It will not be necessary to preprocess the dataset using the dropna method to clean the data. These results also suggest that the setosa species is relatively easy to differentiate from the other two species, particularly when considering the petal lengths and widths. The sepal characteristics are less clear but the distribution plots indicate there may a statistically significant difference between setosa and the other two varieties. In each of the pair plots above, a line can be constructed on the plot that would isolate the setosa values from the other varieties completely. The versicolor and virginica show some separation but are intermingled to some degree on each plot. The separation seen between each species indicates that the K Nearest Neighbours classifier may be an appropriate algorithm to use here. We will carry out a t-test to gain more insight on this."
@@ -277,14 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2a58ca48",
+   "execution_count": 4,
+   "id": "47c7904e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Results of setosa versus other varieties t-tests:\n",
+      "\n",
       "Reject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = 7.709331032755147e-32)\n",
       "\n",
       "Reject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = 1.0353958396281789e-13)\n",
@@ -327,9 +333,9 @@
     "# Check the p-value to determine statistical significance\n",
     "alpha = 0.05  # Significance level\n",
     "if p_value < alpha:\n",
-    "    print(f\"Reject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
+    "    print(f\"\\nReject the null hypothesis: There is a significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
     "else:\n",
-    "    print(f\"Fail to reject the null hypothesis: There is no significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
+    "    print(f\"\\nFail to reject the null hypothesis: There is no significant difference between setosa and the other two varieties (p-value = {p_value})\")\n",
     "\n",
     "# Perform a t-test between setosa and the other two varieties\n",
     "t_stat, p_value = stats.ttest_ind(setosa_data['sepal width (cm)'], other_data['sepal width (cm)'], equal_var=False)\n",
@@ -368,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5364e88f",
+   "id": "4aa73bb1",
    "metadata": {},
    "source": [
     "## Classification Algorithms"
@@ -376,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd5de24",
+   "id": "b682296b",
    "metadata": {},
    "source": [
     "Classification algorithms are fundamental in machine learning, serving to categorize data into predefined classes or categories. They are pivotal in numerous real-world applications, such as sentiment analysis, image recognition (e.g., the MNIST dataset), and medical diagnosis (e.g., the Breast Cancer Wisconsin dataset).\n",
@@ -390,15 +396,115 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341e15a1",
+   "id": "cbdf890d",
+   "metadata": {},
+   "source": [
+    "## Synthetic dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "95be3c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Test DataFrame:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0           5.993117          2.500989           4.542148          1.348742\n",
+      "1           5.731719          4.035864           1.592675          0.282556\n",
+      "2           4.663285          3.145794           1.432123          1.000000\n",
+      "3           5.856311          3.357311           4.562182          1.895071\n",
+      "4           6.579359          2.822018           5.829925          1.905042\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the feature columns\n",
+    "feature_columns = [\"sepal length (cm)\", \"sepal width (cm)\", \"petal length (cm)\", \"petal width (cm)\"]\n",
+    "\n",
+    "# Create an empty DataFrame for test cases\n",
+    "test_df = pd.DataFrame(columns=feature_columns)\n",
+    "\n",
+    "# Generate 150 test cases\n",
+    "num_test_cases = 150\n",
+    "np.random.seed(42)  # Set a random seed for reproducibility\n",
+    "\n",
+    "for _ in range(num_test_cases):\n",
+    "    # Randomly sample feature values from the distribution of the Iris dataset\n",
+    "    random_sample = df.sample(1)[feature_columns].values\n",
+    "    \n",
+    "    # Add random noise to the sampled values to create variability\n",
+    "    noise = np.random.normal(0, 0.2, size=(1, len(feature_columns)))\n",
+    "    test_case = random_sample + noise\n",
+    "    \n",
+    "    # Ensure no negative or zero values in the test case\n",
+    "    test_case[test_case <= 0] = 1\n",
+    "    \n",
+    "    # Append the test case to the test DataFrame\n",
+    "    test_df = pd.concat([test_df, pd.DataFrame(test_case, columns=feature_columns)], ignore_index=True)\n",
+    "\n",
+    "# Display the generated test DataFrame\n",
+    "print(\"Generated Test DataFrame:\")\n",
+    "print(test_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a19cbea1",
    "metadata": {},
    "source": [
     "## K Nearest Neighbours"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4e64e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the KNN classifier: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the feature matrix (X) and target variable (y)\n",
+    "X = df.drop('species', axis=1)\n",
+    "y = df['species']\n",
+    "\n",
+    "# Split the data into training (70%) and test (30%) sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Create a KNN classifier with a specified 'k' value (e.g., k=3)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "\n",
+    "# Train the classifier on the training data\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "# Calculate and print the accuracy of the classifier\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy of the KNN classifier: {accuracy:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "dbb8cb5a",
+   "id": "f9d83e46",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5425642",
    "metadata": {},
    "source": [
     "## Support Vector Machines"
